doc: add tasks api endpoint documentation
